k8s/contact-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contact-app
  namespace: contact-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contact-app
  template:
    metadata:
      labels:
        app: contact-app
    spec:
      containers:
        - name: contact-app
          image: amolamol2403/contact-app:1.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: contact-app
  namespace: contact-app
spec:
  type: ClusterIP
  selector:
    app: contact-app
  ports:
    - port: 80
      targetPort: 3000
