k8s/contact-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contact-app
  namespace: contact-app
spec:
  ingressClassName: nginx
  rules:
    - host: contact.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: contact-app
                port:
                  number: 80
